[gd_scene load_steps=21 format=1]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/dontstop.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/dontstop_dist2.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/dontstop_dist1.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/dontdie.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/gun_to_head.png" type="Texture" id=6]
[ext_resource path="res://assets/font/prstart_16.fnt" type="BitmapFont" id=7]
[ext_resource path="res://assets/font/prstart_24.fnt" type="BitmapFont" id=8]
[ext_resource path="res://assets/font/prstart_48.fnt" type="BitmapFont" id=9]
[ext_resource path="res://scenes/static.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/crt.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/sounds/TV_Static-Mike_Koenig-1287909192.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/18536.wav" type="Sample" id=13]
[ext_resource path="res://assets/sounds/20920.mp3.wav" type="Sample" id=14]

[sub_resource type="Animation" id=1]

resource/name = "title_anim"
length = 0.6
loop = false
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("dontstop:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 0.3, 0.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ false, true, false, true ] }
tracks/1/type = "value"
tracks/1/path = NodePath("dontdie:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.1, 0.3, 0.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ true, false, true, false ] }
tracks/2/type = "value"
tracks/2/path = NodePath("gun:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.1, 0.15, 0.2, 0.25, 0.4, 0.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ true, false, true, false, true, false ] }
tracks/3/type = "value"
tracks/3/path = NodePath("../SamplePlayer:play/play")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0, 0.05, 0.1, 0.2, 0.25, 0.3, 0.4, 0.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ), "update":2, "values":[ "tsch", "tsch", "tsch", "tsch", "tsch", "tsch", "tsch", "tsch" ] }

[sub_resource type="Animation" id=2]

resource/name = "title_anim_dist1"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("dontstop:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ false, true ] }
tracks/1/type = "value"
tracks/1/path = NodePath("dontstop_dist1:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }

[sub_resource type="Animation" id=3]

resource/name = "title_anim_dist2"
length = 1.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("dontstop:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.05, 0.2, 0.3 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ false, true, false, true ] }
tracks/1/type = "value"
tracks/1/path = NodePath("dontstop_dist2:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.05, 0.2, 0.3 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ true, false, true, false ] }
tracks/2/type = "value"
tracks/2/path = NodePath("../SamplePlayer:play/play")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.1, 0.2 ), "transitions":FloatArray( 1, 1, 1 ), "update":2, "values":[ "tsch", "", "tsch" ] }

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="SampleLibrary" id=6]

samples/menu_focus = { "db":0.0, "pitch":1.0, "sample":ExtResource( 13 ) }
samples/tsch = { "db":0.0, "pitch":1.0, "sample":ExtResource( 14 ) }

[node name="main" type="Control"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 640.0
margin/top = 360.0
margin/right = -640.0
margin/bottom = -360.0
script/script = ExtResource( 1 )

[node name="bg" type="Node2D" parent="."]

editor/display_folded = true

[node name="dontstop" type="Sprite" parent="bg"]

transform/pos = Vector2( 640, 128 )
texture = ExtResource( 2 )

[node name="dontstop_dist2" type="Sprite" parent="bg"]

visibility/visible = false
transform/pos = Vector2( 640, 128 )
texture = ExtResource( 3 )

[node name="dontstop_dist1" type="Sprite" parent="bg"]

visibility/visible = false
transform/pos = Vector2( 640, 128 )
texture = ExtResource( 4 )

[node name="dontdie" type="Sprite" parent="bg"]

visibility/visible = false
transform/pos = Vector2( 640, 128 )
texture = ExtResource( 5 )

[node name="title_anim" type="AnimationPlayer" parent="bg"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/title_anim = SubResource( 1 )
anims/title_anim_dist1 = SubResource( 2 )
anims/title_anim_dist2 = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "title_anim_dist2"

[node name="gun" type="Sprite" parent="bg"]

visibility/visible = false
visibility/opacity = 0.4
transform/pos = Vector2( 640, 832 )
transform/scale = Vector2( 5, 5 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="bg"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 65.0
margin/top = 640.0
margin/right = 257.0
margin/bottom = 656.0
custom_fonts/font = ExtResource( 7 )
text = "Â© 2016 danjo"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="bg"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 833.0
margin/top = 640.0
margin/right = 1185.0
margin/bottom = 656.0
custom_fonts/font = ExtResource( 7 )
text = "https://danjo.itch.io/"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="hScoreLabel" type="Label" parent="bg"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 385.0
margin/top = 576.0
margin/right = 865.0
margin/bottom = 624.0
custom_fonts/font = ExtResource( 8 )
text = "HIGHSCORE:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="hscore" type="Label" parent="bg/hScoreLabel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 240.0
margin/top = 0.0
margin/right = 288.0
margin/bottom = 48.0
custom_fonts/font = ExtResource( 8 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="run" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus_neighbour/top = NodePath("../quit")
focus_neighbour/bottom = NodePath("../options")
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 192.0
margin/top = 115.0
margin/right = -204.0
margin/bottom = 61.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "RUN"
flat = false

[node name="options" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus_neighbour/top = NodePath("../run")
focus_neighbour/bottom = NodePath("../quit")
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 192.0
margin/top = 39.0
margin/right = -204.0
margin/bottom = -15.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OPTIONS"
flat = false

[node name="quit" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus_neighbour/top = NodePath("../options")
focus_neighbour/bottom = NodePath("../run")
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 192.0
margin/top = -33.0
margin/right = -204.0
margin/bottom = -87.0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "QUIT"
flat = false

[node name="static" parent="." instance=ExtResource( 10 )]

[node name="CRT" parent="." instance=ExtResource( 11 )]

margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 12 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 3
config/samples = SubResource( 6 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 1
default/filter/cutoff = 2000.0
default/filter/resonance = 2.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 2.0

[connection signal="focus_exit" from="run" to="." method="_on_focus_exit"]

[connection signal="pressed" from="run" to="." method="_on_run_pressed"]

[connection signal="pressed" from="options" to="." method="_on_options_pressed"]

[connection signal="focus_exit" from="quit" to="." method="_on_focus_exit"]

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]


